--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-core</artifactId>
+            <version>0.10</version>
+        </dependency>
     </dependencies>
 <profiles>
     <!-- NOTE: The release profile will be removed from future versions of the super POM -->
